--- a/RentFlex.Web/appsettings.json
+++ b/RentFlex.Web/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RentFlex.Web-f6cbc439-4204-45fd-ac4c-9c848b64809c;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=RentFlexTesting;User Id=sa;Password=Password123!;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
