--- a/RentFlex.Infrastructure/RentFlex.Infrastructure.csproj
+++ b/RentFlex.Infrastructure/RentFlex.Infrastructure.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RentFlex.Utility\RentFlex.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
