--- a/RentFlex.Infrastructure/RentFlex.Infrastructure.csproj
+++ b/RentFlex.Infrastructure/RentFlex.Infrastructure.csproj
@@ -16,9 +16,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RentFlex.Application\RentFlex.Application.csproj" />
     <ProjectReference Include="..\RentFlex.Utility\RentFlex.Utility.csproj" />
   </ItemGroup>
 
