Added images folder

--- a/RentFlex.Web/RentFlex.Web.csproj
+++ b/RentFlex.Web/RentFlex.Web.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\RentFlex.Infrastructure\RentFlex.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\estates\" />
+  </ItemGroup>
+
 </Project>
