--- a/RentFlex.Utility/RentFlex.Utility.csproj
+++ b/RentFlex.Utility/RentFlex.Utility.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="WireMock.Net" Version="1.5.39" />
   </ItemGroup>
 
 </Project>
