--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ networks:
   rentflex:
 volumes:
   sqlserver:
+  uploads:
 
 services:
   rentflex.web:
@@ -17,9 +18,7 @@ services:
     #- "8080:81"
     # - "5001:80"
     volumes:
-    - type: bind
-      source: "./wwwroot/images/estates"
-      target: "/app/wwwroot/images/estates"
+    - uploads:/app/uploads
     depends_on:
     - rentflex-db
     networks:
