--- a/RentFlex.Web/appsettings.Development.json
+++ b/RentFlex.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=RentFlex;User Id=sa;Password=Password123!;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
