--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,17 @@ services:
     build:
       context: .
       dockerfile: RentFlex.Web/Dockerfile
-    # ports:
-    # - "8080:80"
-    #- "8080:81"
-    # - "5001:80"
+    ports:
+    - "8080:8080"
     volumes:
     - uploads:/app/uploads
     depends_on:
     - rentflex-db
     networks:
     - rentflex
+    environment:
+    - ASPNETCORE_ENVIRONMENT=Staging
+    - ASPNETCORE_HTTP_PORTS=8080
 
   rentflex-db:
     container_name: RentFlex-Db
