--- a/RentFlex.Web/appsettings.Development.json
+++ b/RentFlex.Web/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=RentFlex;User Id=sa;Password=Password123!;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "server=localhost;database=RentFlex;User Id=sa;Password=Password123!;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "Cache": "localhost:6379"
   }
 }
