--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,4 +36,11 @@ services:
     networks:
     - rentflex
     volumes:
-    - sqlserver:/var/opt/mssql 
+    - sqlserver:/var/opt/mssql
+ 
+  rentflex.cache:
+    container_name: Rentflex-Cache
+    image: redis:latest
+    restart: always
+    ports:
+    - "6379:6379"
