Added proper SignIn and SignOut

--- a/RentFlex.Web/RentFlex.Web.csproj
+++ b/RentFlex.Web/RentFlex.Web.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Account\" />
     <Folder Include="uploads\images\" />
     <Folder Include="wwwroot\images\estates\" />
   </ItemGroup>
