Added AzureAD settings

--- a/RentFlex.Web/appsettings.Staging.json
+++ b/RentFlex.Web/appsettings.Staging.json
@@ -9,5 +9,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=rentflex-db;database=RentFlex;User Id=sa;Password=Password123!;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=True",
     "Cache": "rentflex.cache:6379"
+  },
+  "AzureAd": {
+    "Instance": "Instance",
+    "Domain": "Domain",
+    "SignUpSignInPolicyId": "Policy_SignUpSignIn",
+    "TenantId": "TenantId",
+    "ClientId": "ClientId",
+    "CallbackPath": "/signin-oidc",
+    "ClientSecret": "ClientSecret"
   }
 }
