--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,11 @@ networks:
 volumes:
   sqlserver:
   uploads:
+  azurite:
 
 services:
   rentflex.web:
-    container_name: RentFlex.Web
+    container_name: RentFlex-Web
     image: ${DOCKER_REGISTRY-}rentflexweb
     build:
       context: .
@@ -18,7 +19,7 @@ services:
     volumes:
     - uploads:/app/uploads
     depends_on:
-    - rentflex-db
+    - rentflex.db
     - rentflex.cache
     networks:
     - rentflex
@@ -26,7 +27,7 @@ services:
     - ASPNETCORE_ENVIRONMENT=Staging
     - ASPNETCORE_HTTP_PORTS=8080
 
-  rentflex-db:
+  rentflex.db:
     container_name: RentFlex-Db
     image: mcr.microsoft.com/mssql/server:2022-latest
     ports:
@@ -47,3 +48,14 @@ services:
     - "6379:6379"
     networks:
     - rentflex
+
+  rentflex.azurite:
+    image: mcr.microsoft.com/azure-storage/azurite
+    container_name: RentFlex-Azurite
+    ports:
+    - "10000:10000" 
+    volumes:
+    - azurite:/data
+    networks:
+    - rentflex
+    
