--- a/RentFlex.Infrastructure/RentFlex.Infrastructure.csproj
+++ b/RentFlex.Infrastructure/RentFlex.Infrastructure.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.4" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.0" />
+    <PackageReference Include="Microsoft.FeatureManagement" Version="3.3.1" />
     <PackageReference Include="Microsoft.Graph" Version="5.53.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="2.18.1" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.18.1" />
