--- a/RentFlex.Web/appsettings.Development.json
+++ b/RentFlex.Web/appsettings.Development.json
@@ -19,5 +19,8 @@
     "ClientId": "ClientId",
     "CallbackPath": "/signin-oidc",
     "ClientSecret": "ClientSecret"
+  },
+  "FeatureFlags": {
+    "PersistDatabase": false
   }
 }
